ajout des files GUI

--- a/default.project.json
+++ b/default.project.json
@@ -17,6 +17,10 @@
       }
     },
 
+    "StarterGui": {
+      "$path": "src/gui"
+    },
+
     "Workspace": {
       "$properties": {
         "FilteringEnabled": true
